# ChangeLog for dev-php5/ZendFramework
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.39 2009/01/16 16:10:31 jer Exp $

  16 Jan 2009; Jeroen Roovers <jer@gentoo.org> ZendFramework-1.7.0.ebuild:
  Stable for HPPA (bug #252991).

  09 Jan 2009; Brent Baude <ranger@gentoo.org> ZendFramework-1.7.0.ebuild:
  stable ppc, bug 252991

  07 Jan 2009; Brent Baude <ranger@gentoo.org> ZendFramework-1.7.0.ebuild:
  stable ppc64, bug 252991

  05 Jan 2009; Markus Meier <maekke@gentoo.org> ZendFramework-1.7.0.ebuild:
  amd64/x86 stable, bug #252991

*ZendFramework-1.7.2 (29 Dec 2008)

  29 Dec 2008; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.5.3.ebuild, -ZendFramework-1.6.0.ebuild,
  +ZendFramework-1.7.2.ebuild:
  Bumping to 1.7.2 and removing old unstable versions

*ZendFramework-1.7.0 (23 Nov 2008)

  23 Nov 2008; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  +ZendFramework-1.7.0.ebuild:
  Bumping to 1.7.0

*ZendFramework-1.6.0 (04 Sep 2008)

  04 Sep 2008; Bjarke Istrup Pedersen <gurligebis@gentoo.org> metadata.xml,
  +ZendFramework-1.6.0.ebuild:
  Bumping to version 1.6.0

*ZendFramework-1.5.3 (08 Aug 2008)

  08 Aug 2008; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.5.2.ebuild, +ZendFramework-1.5.3.ebuild:
  Bumping to version 1.5.3

  08 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  ZendFramework-1.5.2.ebuild:
  Added ~ppc, bug #223565

  27 May 2008; Markus Rothe <corsair@gentoo.org> ZendFramework-1.5.2.ebuild:
  Added ~ppc64; bug #223565

  25 May 2008; Jeroen Roovers <jer@gentoo.org> ZendFramework-1.5.2.ebuild:
  Marked ~hppa (bug #223565).

*ZendFramework-1.5.2 (25 May 2008)

  25 May 2008; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.0.4.ebuild, +ZendFramework-1.5.2.ebuild:
  Bumping to version 1.5.2

  05 May 2008; Markus Meier <maekke@gentoo.org> ZendFramework-1.5.1.ebuild: