@@ -1,6 +1,6 @@
-DIST ZendFramework-1.5.1-apidoc.tar.gz 3720976 RMD160 5c111cc4471f7f303f0e54343eb9be06e677fd38 SHA1 7cec26068b20ce9f023de1ca5c0924e03fc31e51 SHA256 03d415b1d68d4e37ca6c87b905d078131081b4822ab7ec0d6520e65d026b66c5
-DIST ZendFramework-1.5.1-manual-en.tar.gz 1023711 RMD160 7aaa43c5640e0cd40d7083bc53008dfc0932f5a4 SHA1 550e51d78cb119812049acc60ddb754804315bf2 SHA256 9a46f9ce69af1851141465d4fef6c7771ab06a295ac23c89b4b34d40ce1ba42b
-DIST ZendFramework-1.5.1.tar.gz 4300519 RMD160 4355c3283bf4c6799ada85adc416c9ec42ed154b SHA1 d52ae09be90735dc14d633aaac6fe08955b2af8b SHA256 63e298275418b61ae3d7edc4b2d181d221977642edb5808b48f6001609f7a030
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST ZendFramework-1.7.0-apidoc.tar.gz 4707800 RMD160 39d8a4aadd114b315a6616809d4339eeb4d8f592 SHA1 cedec1822232427fe624bacb2ba0d6728c1b7df9 SHA256 b3ffab4e00ad959241c880104d914bf582019c5a39e78dde88f9e186e151fd57
 DIST ZendFramework-1.7.0-manual-en.tar.gz 1182379 RMD160 50edae5d43cdceb2ddc46e9317c57a9ce7c4b0e8 SHA1 909e741ab3acb1ede5cc4ee01e3b5120cbf5bf37 SHA256 3533ca659934a590339592ae263dc8bed10ff73d4188c0d6a06fddd7c4619759
 DIST ZendFramework-1.7.0-minimal.tar.gz 2547136 RMD160 74ab8ee1585aa6b17c5408b92b543dbf1c830f9f SHA1 622e5975c599aaf06e7f865e601c97678d66fe3e SHA256 bb98aa2da9a08ea90198a2f09262cb82cae85edd1e796638f50eeb9faed4d2f3
@@ -9,8 +9,14 @@ DIST ZendFramework-1.7.2-apidoc.tar.gz 4865845 RMD160 44a8fc0c9b0bff07795bea7505
 DIST ZendFramework-1.7.2-manual-en.tar.gz 1180707 RMD160 52c514bcf0f5782e491882ee8631c3e508cbff6f SHA1 56edc0248c5f904caf7b57053e70073a8c65b0a1 SHA256 97a24e24db57120c01230e823869feaeccf2e2f39308439055d9f81faa1a390b
 DIST ZendFramework-1.7.2-minimal.tar.gz 2569482 RMD160 79c508780ae1d83dba75f2d350bb2309e68530ac SHA1 9581d5b908b636a8d80773792fb2b497121a432e SHA256 0cdfbcc4b6ef73f0d0bc8283d6afdf40baeeb22e1346a0e82177f5faa23241be
 DIST ZendFramework-1.7.2.tar.gz 21203462 RMD160 4c27355b61182ccfe2c174ebea39ab22c066a95d SHA1 7b905ef1794647775acdde452fb10749d5dea841 SHA256 f3c1dbe194351feae199953c979c7c3345201c0ecc8886e035396677d4ad100d
-EBUILD ZendFramework-1.5.1.ebuild 1092 RMD160 ec3ddfabcd6d80b231c95a9cfeaf2fbc832ff409 SHA1 308b331a6e6d89984e8e6d34bce82b4ef25086e8 SHA256 955302cf42711be6e2a4ba60dc4fe78c9fa35f79c9d4be2dde304a69a2668539
 EBUILD ZendFramework-1.7.0.ebuild 1694 RMD160 259bc699ba6a515a1a5eb564411f5d9ebde647f3 SHA1 d0aa8e26883fc0d4774c462df41caf35da361ee7 SHA256 c81b4190d7d70a3818a650808993266a94b0549729c66d336258c20934582f6c
 EBUILD ZendFramework-1.7.2.ebuild 1706 RMD160 f39f5b83d36d362c58e2142f2e8c4d38d64cd947 SHA1 aa4c785991aa0489182833998b097836ebc133ce SHA256 aa213c25b8ebcb1759b34fe3a639ba203f1c80bdd5baa4facb2e277a370b43aa
-MISC ChangeLog 6519 RMD160 d362b65e77374b23defcf565df0c5c67e372dba2 SHA1 cbf7470768f82a8d121875eec57bf3f529f6d469 SHA256 9dcbe547567772e896c580db5b7d4595771c87c036a4930451f48e0cd8936a30
+MISC ChangeLog 6691 RMD160 59c4971535e2dadee23be6d388f326761def15d5 SHA1 55d8cf6e3c9f8616c359a8b595cea339e95c7ab6 SHA256 5e9e429e46f9094f97e53300c964521fce27e84f8d80e9dae0fb58d8f485dd61
 MISC metadata.xml 481 RMD160 d9c5fef35ae7395615e3118ca423776a1567794d SHA1 5c9031dea7767ad0b888fe958dc2fd631e5b1289 SHA256 f8cae971c3d76d5a909d1d13060de83b54a441f035b7f4ed9a8c919efb4d7f44
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkl1LT0ACgkQsR7PQhRXYElz1ACdGLxjjoKwdKDo5cIBi2vIY3pX
+8twAnAr2HLJtgkgXTLUkt2bZnIbMn5gr
+=0in2
+-----END PGP SIGNATURE-----
