@@ -1,6 +1,10 @@
 # ChangeLog for dev-php5/ZendFramework
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.39 2009/01/16 16:10:31 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.40 2009/01/19 23:47:17 gurligebis Exp $
+
+  20 Jan 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
+  -ZendFramework-1.5.1.ebuild:
+  Removing old version, since 1.7.0 is stable on more archs than 1.5.1
 
   16 Jan 2009; Jeroen Roovers <jer@gentoo.org> ZendFramework-1.7.0.ebuild:
   Stable for HPPA (bug #252991).
